--- a/app/src/main/res/layout/activity_order_in_delivery.xml
+++ b/app/src/main/res/layout/activity_order_in_delivery.xml
@@ -30,12 +30,19 @@
             android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingBottom="120dp"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        >
 
         <!-- FragmentContainerView for dynamic fragment replacement -->
         <androidx.fragment.app.FragmentContainerView
@@ -56,11 +63,23 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/cancel_order"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="1dp"
+                android:layout_marginRight="1dp"
+                android:background="@drawable/accept_button"
+                android:fontFamily="@font/hacen_beirut_bight"
+                android:text="تم الاستلام"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
+
+            <Button
                 android:id="@+id/detailed_order_btn_od"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 android:background="@drawable/tomato_padding_button"
                 android:fontFamily="@font/hacen_beirut_bight"
@@ -68,17 +87,7 @@
                 android:textColor="@color/tomato_red"
                 android:textSize="20dp" />
 
-            <Button
-                android:id="@+id/cancel_order"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                android:background="@drawable/accept_button"
-                android:fontFamily="@font/hacen_beirut_bight"
-                android:text="تم التوصيل"
-                android:textColor="@color/white"
-                android:textSize="20dp" />
+
         </LinearLayout>
 
         <!-- OTP Input Field and Submit Button -->
@@ -149,6 +158,7 @@
         </LinearLayout>
     </LinearLayout>
 
+    </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView_od"
