--- a/app/src/main/res/layout/custom_card_order.xml
+++ b/app/src/main/res/layout/custom_card_order.xml
@@ -32,24 +32,73 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/customer_name_new"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:text="أحمد علي"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/order_date_new"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/customer_name_new"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="أحمد علي"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/pay_meth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="طريقة الدفع: كاش"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:text="رقم الطلب: 348"
-                    android:textColor="@android:color/black"
-                    android:textSize="12sp" />
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/price_del"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="سعر التوصيل: 200 دج"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                         />
+
+                    <TextView
+                        android:id="@+id/allprice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="سعر الطلبية: 2500 دج"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+
+                    <TextView
+                        android:id="@+id/order_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="#1324"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+
+
             </LinearLayout>
 
             <LinearLayout
