--- a/app/src/main/res/layout/custom_notification_new_order.xml
+++ b/app/src/main/res/layout/custom_notification_new_order.xml
@@ -1,40 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- res/layout/order_item_ar.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:layoutDirection="rtl"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
     <LinearLayout
-        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
+            android:id="@+id/titleneworder"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="طلبية جديدة"
-            android:textSize="25sp"
-            android:gravity="center"
-            android:textColor="@color/black"
             android:fontFamily="@font/hacen_beirut_bight"
-            android:textStyle="bold"
-            android:layout_marginTop="4dp" />
+            android:text="طلبية جديدة"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:background="@color/profileordercolor"
-            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
             android:padding="8dp">
 
             <ImageView
@@ -49,89 +45,192 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/customer_name_new"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="أحمد علي"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/pay_meth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="طريقة الدفع: كاش"
+                        android:textColor="@android:color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/price_del"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="سعر التوصيل: 200 دج"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        />
+
+                    <TextView
+                        android:id="@+id/allprice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="سعر الطلبية: 2500 دج"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+
                 <TextView
-                    android:id="@+id/customer_name_onloading"
+                    android:id="@+id/order_id"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="مطعم الحرية"
-                    android:textColor="@color/black"
                     android:fontFamily="@font/hacen_beirut_bight"
+                    android:text="#1324"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/order_date_onloading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="اليوم الساعة 12:33 ص"
-                    android:textSize="12sp"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:textColor="@android:color/black" />
+
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="start">
-
-                <TextView
-                    android:id="@+id/order_id_onloading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="رقم الطلب: 348"
-                    android:textSize="12sp"
-
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:textColor="@android:color/black" />
-
-                <TextView
-                    android:id="@+id/order_total_onloading"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="سعر التوصيل : 42.00 دج"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:textStyle="bold"
-                    android:layout_marginTop="4dp" />
-            </LinearLayout>
+                android:gravity="start"
+                android:orientation="vertical"/>
         </LinearLayout>
 
+        <!-- res/layout/order_item_ar.xml -->
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layoutDirection="rtl"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <!-- باقي التخطيط كما هو -->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/item_name_new"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="مكان المطعم :"
+                        android:textColor="@color/black"
+                        android:paddingLeft="10dp"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/item_quantity_new"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="لبامة البياضة"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:orientation="horizontal" >
+
+
+                    <TextView
+                        android:id="@+id/order_message_new"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="مكان الزبون :"
+                        android:paddingLeft="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/customer_location"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/hacen_beirut_bight"
+                        android:text="حي المستقبل البياضة"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:orientation="horizontal"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp">
-
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
 
 
 
             <Button
-                android:id="@+id/accept_order"
+                android:id="@+id/detailed_order_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginRight="1dp"
+                android:layout_marginLeft="1dp"
                 android:background="@drawable/accept_button"
                 android:fontFamily="@font/hacen_beirut_bight"
+                android:text="قبول الطلب"
                 android:textColor="@color/white"
-                android:textSize="20dp"
-                android:text="قبول الطلب" />
+                android:textSize="20dp" />
 
             <Button
-                android:id="@+id/cancel_order"
+                android:id="@+id/direction_order_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:textColor="@color/white"
-                android:textSize="20dp"
-                android:text="رفض الطلب"
                 android:background="@drawable/remove_button"
                 android:fontFamily="@font/hacen_beirut_bight"
-                android:layout_marginStart="8dp" />
+                android:text="رفض الطلب"
+                android:textColor="@color/white"
+                android:textSize="20dp" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
